creating foundational UI elements

--- a/nonstandard.ui.asmdef
+++ b/nonstandard.ui.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "nonstandard.ui",
+    "name": "com.codegiraffe.nonstandard.ui",
     "rootNamespace": "",
     "references": [
         "GUID:6ee1dc0db5778894f86222e9eb7ab103",
